--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 @import "~codemirror/lib/codemirror.css";
 @import "~codemirror/addon/hint/show-hint.css";
 
+.CodeMirror {
+  font-size: 16px;
+}
+
 .CodeMirror-hints {
   z-index: 100;
 }
