--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,20 @@
   color: darkblue;
 }
 
+@font-face {
+  font-family: "Iosevka Web";
+  font-display: swap;
+  font-weight: 400;
+  font-stretch: normal;
+  font-style: normal;
+  src: url(/fonts/iosevka-regular.woff2) format("woff2");
+}
+
+.CodeMirror pre.CodeMirror-line,
+.CodeMirror pre.CodeMirror-line-like {
+  font-family: "Iosevka Web";
+}
+
 /* purgecss end ignore */
 
 @tailwind utilities;
