Add padding to docs on mobile

--- a/src/docs/layout/assets/css/pilcrow.css
+++ b/src/docs/layout/assets/css/pilcrow.css
@@ -1,6 +1,7 @@
 /* needed because the container has overflow: hidden, but the pilcrows overflow */
 .markdown-body {
   padding-left: 30px;
+  padding-right: 30px;
 }
 
 .markdown-body h1,
@@ -18,9 +19,9 @@
 .markdown-body h4:hover .header-link:before,
 .markdown-body h5:hover .header-link:before,
 .markdown-body h6:hover .header-link:before {
-    content: "\00B6";/* pilcrow */
-    color: #888;
-    font-size: smaller;
+  content: "\00B6"; /* pilcrow */
+  color: #888;
+  font-size: smaller;
 }
 
 .markdown-body .header-link {
