Fix title of documentation page

--- a/src/docs/layout/page.html
+++ b/src/docs/layout/page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui" />
-    <title>{{title}}</title>
+    <title>Liftosaur: Weight Lifting Tracking App - Documentation</title>
     <link type="text/css" rel="stylesheet" href="{{asset 'css/menu.css'}}" />
     <link type="text/css" rel="stylesheet" href="{{asset 'css/github-markdown.css'}}" />
     <link type="text/css" rel="stylesheet" href="{{asset 'css/pilcrow.css'}}" />
