--- a/src/about.css
+++ b/src/about.css
@@ -18,15 +18,65 @@ a {
 .top-nav {
   padding: 48px 12px;
   text-align: right;
+  display: flex;
+  align-items: center;
 }
 
-.top-nav ul,
-.top-nav li {
+.top-nav-menu {
+  flex: 1;
+  padding-right: 1.5em;
+}
+
+.top-nav-menu,
+.top-nav-menu li {
   display: inline-block;
+  vertical-align: middle;
+  list-style: none;
 }
 
-.top-nav li {
-  margin: 0 16px;
+.top-nav-menu li {
+  margin: 0 1em;
+  line-height: 1.5em;
+}
+
+.top-nav-social,
+.top-nav-social li {
+  display: inline-block;
+  vertical-align: middle;
+  list-style: none;
+}
+
+.top-nav-social li {
+  margin: 0;
+}
+
+.top-nav-social a span {
+  visibility: hidden;
+}
+
+.logo-facebook,
+.logo-twitter,
+.logo-reddit {
+  width: 1.5em;
+  height: 1.5em;
+  text-indent: -9999px;
+  display: inline-block;
+  padding: 0.5em;
+  background-position: center;
+  background-size: 60%;
+  background-repeat: no-repeat;
+}
+
+.logo-facebook {
+  background-image: url(/images/logo-facebook.svg);
+}
+
+.logo-reddit {
+  background-image: url(/images/logo-reddit.svg);
+}
+
+.logo-twitter {
+  background-image: url(/images/logo-twitter.svg);
 }
 
 .hero {
@@ -391,6 +441,11 @@ a.footer-logo {
 footer nav {
   padding: 48px 12px;
   text-align: right;
+  display: flex;
+}
+
+.footer-menu {
+  flex: 1;
 }
 
 footer nav ul,
@@ -402,10 +457,29 @@ footer nav li {
   margin: 0 16px;
 }
 
+.footer-social,
+.footer-social li {
+  display: inline-block;
+  vertical-align: middle;
+  list-style: none;
+}
+
+.footer-social li {
+  margin: 0;
+}
+
+.footer-social a span {
+  visibility: hidden;
+}
+
 @media (max-width: 780px) {
   .top-nav {
     text-align: left;
     padding: 24px 12px;
+  }
+
+  .top-nav-menu {
+    padding-right: 0;
   }
 
   .hero {
