--- a/src/about.css
+++ b/src/about.css
@@ -196,8 +196,43 @@ a.hero-title {
   padding-top: 1.5em;
 }
 
+.intro {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 2em;
+  line-height: 1.7;
+}
+
+.intro h2 {
+  font-family: Poppins;
+  font-size: 3em;
+  text-align: center;
+  line-height: 1.5em;
+  padding-bottom: 0.5em;
+  color: #1a202c;
+}
+
+.intro-more {
+  margin-top: 1em;
+}
+
+.intro pre {
+  text-align: center;
+}
+
+.code {
+  text-align: left;
+}
+
+@media (max-width: 780px) {
+  .intro pre[class*="language-"] {
+    font-size: 0.8em;
+  }
+}
+
 .features {
   font-size: 16px;
+  padding-top: 8em;
 }
 
 .features-list {
@@ -208,7 +243,7 @@ a.hero-title {
 
 .features h2 {
   font-family: Poppins;
-  font-size: 3.75em;
+  font-size: 3em;
   text-align: center;
   line-height: 1.5em;
   padding-bottom: 0.5em;
