Add images for exercise editors

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,15 @@
   text-decoration: underline;
 }
 
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 /* purgecss end ignore */
 
 @tailwind utilities;
