--- a/blog/styles/blog.css
+++ b/blog/styles/blog.css
@@ -11,3 +11,20 @@ body {
   margin: 0 auto;
   padding: 30px 0;
 }
+
+.highlight-block {
+  background: #edf2f7;
+  padding: 2em;
+  text-align: center;
+}
+
+.highlight-block-sum {
+  font-size: 0.8em;
+  font-style: italic;
+  text-align: center;
+}
+
+.post-date {
+  margin-left: 0.25em;
+  font-style: italic;
+}
