--- a/src/docs/layout/partials/menu.hbs
+++ b/src/docs/layout/partials/menu.hbs
@@ -11,6 +11,7 @@
         <li><a href="/">App</a></li>
         <li><a href="/about">About</a></li>
         <li><strong>Documentation</strong></li>
+        <li><a href="/blog">Blog</a></li>
       </ul>
     </nav>
   </div>
