--- a/blog/_includes/index.liquid
+++ b/blog/_includes/index.liquid
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="Description" content="Arpit Batra" />
+    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
     <title>Liftosaur: Weight Lifting Tracking App - Blog</title>
     <link rel="stylesheet" href="/docs/assets/css/menu.css" />
     <link rel="stylesheet" href="/docs/assets/css/github-markdown.css" />
     <link rel="stylesheet" href="/docs/assets/css/pilcrow.css" />
     <link rel="stylesheet" href="{{ '/styles/blog.css' | url }}" />
+    <meta property="og:title" content="Liftosaur's Blog" />
+    <meta property="og:description" content="Various blogposts about weightlifting or Liftosaur" />
+    <meta property="fb:app_id" content="3448767138535273" />
+    <meta property="og:url" content="https://www.liftosaur.com/blog" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://www.liftosaur.com/images/logo-square.png" />
   </head>
   <body>
     <div class="markdown-body">
