Add editing sets in progress view

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,28 @@
   width: 100%;
 }
 
+.is-edit-mode {
+  animation: wiggle 0.25s infinite;
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 /* purgecss end ignore */
 
 @tailwind utilities;
