--- a/blog/styles/blog.css
+++ b/blog/styles/blog.css
@@ -16,6 +16,7 @@ body {
   background: #edf2f7;
   padding: 2em;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .highlight-block-sum {
@@ -27,4 +28,12 @@ body {
 .post-date {
   margin-left: 0.25em;
   font-style: italic;
+}
+
+.subscription {
+  text-align: right;
+  font-size: 0.8rem;
+  font-style: italic;
+  line-height: 1;
+  margin-bottom: 0.5rem;
 }
