Add tags to the blog

--- a/blog/_includes/index.liquid
+++ b/blog/_includes/index.liquid
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="Description" content="Arpit Batra" />
-    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
-    <title>Liftosaur: Weight Lifting Tracking App - Blog</title>
-    <link rel="stylesheet" href="/docs/assets/css/menu.css" />
-    <link rel="stylesheet" href="/docs/assets/css/github-markdown.css" />
-    <link rel="stylesheet" href="/docs/assets/css/pilcrow.css" />
-    <link rel="stylesheet" href="{{ '/styles/blog.css' | url }}" />
-    <meta property="og:title" content="Liftosaur's Blog" />
-    <meta property="og:description" content="Various blogposts about weightlifting or Liftosaur" />
-    <meta property="fb:app_id" content="3448767138535273" />
-    <meta property="og:url" content="https://www.liftosaur.com/blog" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.liftosaur.com/images/logo-square.png" />
-  </head>
-  <body>
-    <div class="markdown-body">
-      {% include menu %}
-      <h1>Liftosaur Blog</h1>
-      <ul class="posts">
-      {% for post in collections.posts reversed %}
-        <li class="post">
-          <span class="post-title">
-            {% if post.data.externalLink %}
-              <a href="{{ post.data.externalLink }}" target="__blank">{{ post.data.title }}</a>
-            {% else %}
-              <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-            {% endif %}
-          </span>
-          <span class="post-date">
-            - 
-            {{ post.date | date: "%Y/%m/%d" }}
-          </span>
-        </li>
-      {% endfor %}
-    </ul>
-    </div>
-  </body>
-</html>
+{% include posts posts: collections.all %}
