Add RSS for blog

--- a/blog/_includes/head.liquid
+++ b/blog/_includes/head.liquid
@@ -11,3 +11,4 @@
 <meta property="og:title" content="{{ og_title }}" />
 <meta property="og:description" content="{{ og_description }}" />
 <meta property="fb:app_id" content="3448767138535273" />
+<link rel="alternate" type="application/rss+xml" title="Liftosaur Blog RSS feed" href="https://www.liftosaur.com/blog/feed.xml" />
