Make twitter/reddit open in a new tab

--- a/blog/_includes/blogpost.liquid
+++ b/blog/_includes/blogpost.liquid
@@ -16,10 +16,10 @@
         <div class='content'>{{ content }}</div>
         <div class='discuss'>
           {% if twitter %}
-            <a class="discuss-twitter" href="{{ twitter }}">Discuss on Twitter</a>
+            <a target="_blank" class="discuss-twitter" href="{{ twitter }}">Discuss on Twitter</a>
           {% endif %}
           {% if reddit %}
-            <a class="discuss-reddit" href="{{ reddit }}">Discuss on Reddit</a>
+            <a target="_blank" class="discuss-reddit" href="{{ reddit }}">Discuss on Reddit</a>
           {% endif %}
         </div>
         <div class="back-link">
