--- a/src/editor.css
+++ b/src/editor.css
@@ -1,2 +1,2 @@
-@import "~codemirror/lib/codemirror.css";
-@import "~codemirror/addon/hint/show-hint.css";
+@import "codemirror/lib/codemirror.css";
+@import "codemirror/addon/hint/show-hint.css";
