--- a/src/programDetails.css
+++ b/src/programDetails.css
@@ -19,4 +19,19 @@ body {
   flex: 1;
 }
 
+.program-details-exercise-switch {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .program-details-exercise-switch {
+    display: block;
+  }
+  .program-details-exercise.is-details .program-details-exercise-playground,
+  .program-details-exercise.is-playground .program-details-exercise-image,
+  .program-details-exercise.is-playground .program-details-exercise-content {
+    display: none;
+  }
+}
+
 /* purgecss end ignore */
