--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,17 @@
 @import "~codemirror/lib/codemirror.css";
 @import "~codemirror/addon/hint/show-hint.css";
 
+body {
+  font-size: 14px;
+  background: white;
+  color: #171718;
+}
+
+.has-shadow {
+  box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.2s ease-in-out;
+}
+
 .CodeMirror {
   font-size: 16px;
 }
