--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,15 @@ body {
   color: #171718;
 }
 
+.footer {
+  padding-bottom: env(safe-area-inset-bottom, 0.5rem);
+}
+
+.stop-scrolling {
+  -webkit-overflow-scrolling: touch;
+  overflow: hidden;
+}
+
 .has-shadow {
   box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05);
 }
