--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,11 @@ input[type="checkbox"].checkbox:disabled {
   }
 }
 
+.sticky {
+  position: fixed;
+  top: 0;
+}
+
 /* purgecss end ignore */
 
 @tailwind utilities;
