--- a/src/docs/layout/partials/menu.hbs
+++ b/src/docs/layout/partials/menu.hbs
@@ -12,8 +12,8 @@
         <li><a href="/about">About</a></li>
         <li><strong>Documentation</strong></li>
         <li><a href="/blog">Blog</a></li>
-        <li><a href="/program">Workout Builder</a></li>
-        <li><a href="/planner">Workout Planner</a></li>
+        <li><a href="/program">Program Builder</a></li>
+        <li><a href="/planner">Program Planner</a></li>
       </ul>
     </nav>
   </div>
