Fix unwanted selection on long press on set

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
   overflow: hidden;
 }
 
+.no-select {
+  user-select: none;
+}
+
 .has-shadow {
   box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05);
 }
