--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,8 @@ input[type="checkbox"].checkbox:disabled {
   line-height: 1.1;
 }
 
-.uplot.graph-max-weight .u-title {
+.uplot.graph-max-weight .u-title,
+.uplot.graph-muscle-group .u-title {
   padding-left: 0.75rem;
   padding-right: 7rem;
   text-align: left;
