Add alias to root page - /app

--- a/blog/_includes/menu.liquid
+++ b/blog/_includes/menu.liquid
@@ -8,7 +8,7 @@
   <div class="docs-nav-right">
     <nav>
       <ul>
-        <li><a href="/">App</a></li>
+        <li><a href="/app">App</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/docs/docs.html">Documentation</a></li>
         <li><a href="/blog"><strong>Blog</strong></a></li>
