--- a/src/docs/layout/partials/menu.hbs
+++ b/src/docs/layout/partials/menu.hbs
@@ -8,7 +8,7 @@
   <div class="docs-nav-right">
     <nav>
       <ul>
-        <li><a href="/">App</a></li>
+        <li><a href="/app">App</a></li>
         <li><a href="/about">About</a></li>
         <li><strong>Documentation</strong></li>
         <li><a href="/blog">Blog</a></li>
