--- a/blog/styles/blog.css
+++ b/blog/styles/blog.css
@@ -68,3 +68,16 @@ body {
 .discuss-twitter {
   margin: 0 1rem;
 }
+
+.markdown-body-pre {
+  padding: 16px;
+  overflow: auto;
+  font-size: 85%;
+  line-height: 1.45;
+  background-color: #f7f7f7;
+  border-radius: 3px;
+  word-wrap: normal;
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
