Add planner to all the pages

--- a/blog/_includes/menu.liquid
+++ b/blog/_includes/menu.liquid
@@ -8,10 +8,11 @@
   <div class="docs-nav-right">
     <nav>
       <ul>
-        <li><a href="/app">App</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/docs/docs.html">Documentation</a></li>
-        <li><a href="/blog"><strong>Blog</strong></a></li>
+        <li><a href="/docs/docs.html">Docs</a></li>
+        <li><strong>Blog</strong></li>
+        <li><a href="/program">Web Editor</a></li>
+        <li><a href="/planner">Workout Planner</a></li>
       </ul>
     </nav>
   </div>
