--- a/src/docs/layout/partials/menu.hbs
+++ b/src/docs/layout/partials/menu.hbs
@@ -8,11 +8,11 @@
   <div class="docs-nav-right">
     <nav>
       <ul>
-        <li><a href="/app">App</a></li>
         <li><a href="/about">About</a></li>
-        <li><strong>Documentation</strong></li>
+        <li><strong>Docs</strong></li>
         <li><a href="/blog">Blog</a></li>
-        <li><a href="/program">Program Builder</a></li>
+        <li><a href="/program">Web Editor</a></li>
+        <li><a href="/planner">Workout Planner</a></li>
       </ul>
     </nav>
   </div>
