--- a/src/about.css
+++ b/src/about.css
@@ -25,8 +25,12 @@ a {
 .top-nav-menu {
   flex: 1;
   padding-right: 1.5em;
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: bold;
+}
+
+.top-nav-menu strong {
+  color: #171718;
 }
 
 .top-nav-menu,
@@ -39,6 +43,7 @@ a {
 .top-nav-menu li {
   margin: 0 1em;
   line-height: 1.5em;
+  white-space: nowrap;
 }
 
 .top-nav-social,
@@ -385,6 +390,10 @@ a.hero-title {
   margin: 2em auto 0;
   width: 80%;
   height: auto;
+}
+
+.feature-web-editor {
+  margin-bottom: 8em;
 }
 
 .features-right {
