--- a/src/planner.css
+++ b/src/planner.css
@@ -157,4 +157,41 @@ body {
   margin-top: -30px;
 }
 
+.tok-variableName {
+  color: #171718;
+  font-weight: bold;
+}
+
+.tok-keyword {
+  color: #708;
+}
+
+.tok-literal {
+  color: #164;
+}
+
+.tok-comment {
+  color: #8b9bab;
+}
+
+.tok-atom {
+  color: #940;
+}
+
+.tok-propertyName {
+  color: #8b9bab;
+}
+
+.tok-attributeName {
+  color: #940;
+}
+
+.tok-attributeValue {
+  color: #28839f;
+}
+
+.tok-number {
+  color: #164;
+}
+
 /* purgecss end ignore */
