--- a/src/index.css
+++ b/src/index.css
@@ -534,6 +534,51 @@ input[type="checkbox"].checkbox:disabled {
   margin-top: -30px;
 }
 
+.tok-variableName {
+  color: #171718;
+  font-weight: bold;
+}
+
+.tok-keyword {
+  color: #708;
+}
+
+.tok-literal {
+  color: #164;
+}
+
+.tok-meta {
+  color: #6f6e24;
+}
+
+.tok-comment {
+  color: #8b9bab;
+}
+
+.tok-atom {
+  color: #940;
+}
+
+.tok-propertyName {
+  color: #8b9bab;
+}
+
+.tok-attributeName {
+  color: #940;
+}
+
+.tok-attributeValue {
+  color: #28839f;
+}
+
+.tok-number {
+  color: #164;
+}
+
+.tok-string {
+  color: #28839f;
+}
+
 /* purgecss end ignore */
 
 @tailwind utilities;
