Make syntax highlighter highlight embedded liftoscript syntax

--- a/src/index.css
+++ b/src/index.css
@@ -535,8 +535,7 @@ input[type="checkbox"].checkbox:disabled {
 }
 
 .tok-variableName {
-  color: #171718;
-  font-weight: bold;
+  color: #28839f;
 }
 
 .tok-keyword {
